src/test/resources/invalid/04_import-without-path.fmx
<fmx:import fmx:name="bibo">
  <main second="bibo" attr1="dodo" third="cecil">
  </main>
</fmx:import>